added function to track time

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
             <button onclick="start()">Start!</button>
         </div>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
